Added interface, speed modes/

--- a/inject.css
+++ b/inject.css
@@ -1,34 +1,36 @@
 .vsq_settings_bar {
-  background-color: "black";
-  color: "white";
-  opacity: 0.9;
-
   position: absolute;
   left: 0px;
   top: 0px;
   z-index: 99999;
 
+  color: "black";
+  opacity: 0.3;
+
   border-radius: 5px;
   padding: 5px;
   margin: 10px;
+
+  width: 300px;
+
+  cursor: default;
 }
 
-
-.vsq_dummy_text {
-  background-color: "black";
-  color: "white";
-  opacity: 0.3;
-
-  margin: 0;
+.vsq_settings_bar:hover {
+  opacity: 0.9;
 }
 
 .vsq_button {
   background-color: "black";
   color: "white";
-  opacity: 1;
+  margin: 2px;
+}
 
-  width: 100px;
-  height: 50px;
+.vsq_input {
+  width: 30px;
+}
 
-  margin: 0;
+.vsq_txt {
+  display: inline-block;
+  color: white;
 }
